@@ -22,7 +22,7 @@ typedef struct
     int port_back;
     int reserveIY;
     int dump_graphs;
-	int optralloc_exact_cost;
+    int optralloc_remat;
   }
 Z80_OPTS;
 
@@ -32,12 +32,8 @@ extern Z80_OPTS z80_opts;
 #define IS_Z80 (z80_opts.sub == SUB_Z80)
 #define IY_RESERVED (z80_opts.reserveIY)
 
-#define OPTRALLOC_EXACT_COST (z80_opts.optralloc_exact_cost)
-
-// For debugging only - remove these lines before merge!
-//#undef OPTRALLOC_EXACT_COST
-//#define OPTRALLOC_EXACT_COST 1
-
+#define OPTRALLOC_REMAT (z80_opts.optralloc_remat)
+#define OPTRALLOC_EXACT_COST IS_Z80 // Todo: Implement exact cost for gbz80.
 #define OPTRALLOC_HL IS_Z80
 #define OPTRALLOC_A 1
 #define OPTRALLOC_IY !IY_RESERVED
